tests/bad_units_factor.out
./bad_units_factor.svx:3:13: error: *UNITS factor must be non-zero
 *units tape 0 feet
             ^
./bad_units_factor.svx:4:16: error: *UNITS factor must be non-zero
 *units compass 000 degrees
                ^~~
./bad_units_factor.svx:5:14: error: *UNITS factor must be non-zero
 *units clino 0.0 grads
              ^~~
./bad_units_factor.svx:6:14: error: *UNITS factor must be non-zero
 *units depth .0 metres
              ^~
./bad_units_factor.svx:7:17: error: *UNITS factor must be non-zero
 *units altitude 0 yards
                 ^
./bad_units_factor.svx:8:18: error: *UNITS factor must be non-zero
 *units backclino 0 percent
                  ^

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 1 survey station, joined by 0 legs.
There are 0 loops.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m

There were 0 warning(s) and 6 error(s) - no output files produced.
