tests/bad_units_factor.svx
; pos=fail error=6
*fix 1 reference 0 0 0
*units tape 0 feet
*units compass 000 degrees
*units clino 0.0 grads
*units depth .0 metres
*units altitude 0 yards
*units backclino 0 percent
